--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
         </div>
         <div class="right-container">
-            <div class="first-head-time">
+            <div class="first-head-time time-counter">
                 <div class="box-time timehead">TIME</div>
                 <div class="box-time">
                     <h3 id="hrs">10 </h3>
